--- a/rust/set/Cargo.toml
+++ b/rust/set/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "0.8.5"
 enum-iterator = "0.7.0"
