--- a/rust/set/Cargo.toml
+++ b/rust/set/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "0.8.5"
+rand = { version = "0.8.5", features = [ "small_rng" ] }
 enum-iterator = "0.7.0"
